# fossick

./: CHANGELOG.md  README.md  SKILL-commonmark.md  SKILL.html  cdp.html  cdp.html.md  cli.html  cli.html.md  core.html  core.html.md  index.html  index.html.md  mcp.html  mcp.html.md  pyproject.toml  robots.txt  search.html  search.html.md  search.json  sitemap.xml
fossick/: SKILL.md  __init__.py  _modidx.py  cdp.py  cli.py  core.py  mcp.py  search.py  searxng_settings.yml  skill.py
fossick/js/: reader.js
nbs/: 00_core.ipynb  01_cdp.ipynb  02_search.ipynb  03_cli.ipynb  04_mcp.ipynb  04_skill.ipynb  SKILL.md  chrome_debug.plist  chrome_debug.service  chrome_debug_task.xml  index.ipynb  nbdev.yml  searxng_settings.yml
